--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,12 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "@typescript-eslint/parser",
+    "plugin:react/recommended",
     "prettier"
   ],
-
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
