--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,10 +3,6 @@
     "tabWidth": 2, 
     "useTabs": false, 
     "semi": true, 
-    "singleQuote": true, 
-    "quoteProps": "consistent", 
-    "trailingComma": "es5", 
-    "bracketSpacing": true, 
-    "arrowParens": "always", 
-    "endOfLine": "lf" 
+    "singleQuote": true,
+    "trailingComma": "all"
   }
