--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.12.0",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
@@ -50,9 +51,9 @@
     "@craco/types": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint-plugin-jest": "^25.3.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
     "typescript": "^4.9.5"
