--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
