--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
+    "reselect": "^4.1.8",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
