--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
       "@hooks/*": ["hooks/*"],
       "@layout/*": ["layout/*"],
       "@core/*": ["core/*"],
-      "@api/*": ["api/*"]
+      "@api/*": ["api/*"],
+      "@redux/*": ["redux/*"]
     }
   },
   "include": ["src", "craco.config.js"]
