--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "ajv": "^8.12.0",
+    "axios": "^1.5.0",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
